--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <img src="./img/custom/texas.jpg" width="40" height="40" style="transform:scale(1.2,1.2)translate(-8px,1px)"class="d-inline-block align-top" alt="">
               <a class="navbar-brand" href="#" translate-id="topbar-1">Exile1201</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                      aria-controls="navbarNav" aria-expanded="false" aria-label="展开">
+                      aria-controls="navbarNav" aria-expanded="true" aria-label="展开">
                   <span class="navbar-toggler-icon"></span>
               </button>
       </nav>
