--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       </nav>
 
     </body>
-    <script src="js/aknav.js"></script>
+    <script src="js/nav.js"></script>
     <script src="js/akhrhome.js"></script>
     </html>
