--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name='theme-color' content='#222222ff'>
     <title translate-id='web-title'>Exile1201</title>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='css/ak.css'>
-    <link rel='stylesheet' href='css/akhome.css'>
-    <link rel='stylesheet' href='css/akchardetail.css'>
+    <link rel='stylesheet' href='css/font.css'>
+    <link rel='stylesheet' href='css/home.css'>
+    <link rel='stylesheet' href='css/detail.css'>
     <link href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
