--- a/pixelgame.html
+++ b/pixelgame.html
@@ -1,3 +1,4 @@
+<link rel='stylesheet' href='css/pixel.css'>
 <div class="frame">
    <div class="corner_topleft"></div>
    <div class="corner_topright"></div>
