--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       </nav>
 
     </body>
+    
     <script src="js/nav.js"></script>
-    <script src="js/akhrhome.js"></script>
+    <script type="text/javascript" src="js/autoPlayAudios.js" ></script>
+	<script>
+	var apas = new autoPlayAudios();
+	apas.play();
+	</script>
     </html>
