--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </body>
     
     <script src="js/nav.js"></script>
-    <script type="text/javascript" src="js/autoPlayAudios.js" ></script>
+    <script type="text/javascript" src="js/audio.js" ></script>
 	<script>
 	var apas = new autoPlayAudios();
 	apas.play();
