--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
       </nav>
 
     </body>
-	<script>
-	var apas = new autoPlayAudios();
-	apas.play();
-	</script>
+	  <script src='js/nav.js'></script>
+	  <script src='js/home.js'></script>
     </html>
