--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
               </button>
       </nav>
 
+	    <div class="footer-separator" style="height:100px;"></div>
+    <div class="row" >
+        <div class="col-12 ak-footer chara-footer-1">
+            <div class="col-12 text-center" style="height: 50px;">
+                <span style="vertical-align: middle;line-height: 50px;"></span>
+            </div>
+        </div>
+    </div>
+	    
     </body>
 	  <script src='js/nav.js'></script>
 	  <script src='js/home.js'></script>
