--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 </script>
     </head>
     <body>
+
+
+      
       <button class='btn btn-sm btn-primary goToTag' style='position:fixed;bottom:15px ;right: 0px;size:70px 70px;padding: 10px;z-index: 10000' id='to-tag' type='button'>^ </button>
       <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
               <img src="./img/custom/texas.jpg" width="40" height="40" style="transform:scale(1.2,1.2)translate(-8px,1px)"class="d-inline-block align-top" alt="">
@@ -36,6 +39,43 @@
                   <span class="navbar-toggler-icon"></span>
               </button>
       </nav>
+<div id='acedonate'></div>
+    <div style='padding-bottom:40px;'></div>
+    <div class='row home-main'>
+        <div class="col-12 home-sub1" style="display: block; margin: auto;">
+            <div class="row">
+                <div class="col-12" id="home-features">
+                    <div class="ak-header">
+                        <span>Available Tools</span>
+                        <div class="ak-separator"></div>
+                    </div>
+<div id="home-content">
+                        
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="ak-header">
+                                <span>To-do List</span>
+                                <div class="ak-separator"></div>
+                            </div>
+                            <ul style="background-color: #2a2a2a; border-radius: 15px; color: white; padding-top: 15px; padding-bottom: 15px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)">
+                                <li>Chara detail <i class="fa fa-check"></i></li>
+                                <li>Item list </li>
+                                <li>Stage list</li>
+                                <li>Daily list</li>
+                                <li>Mission from newbie,daily,and main mission</li>
+                                <li>Show item list</li>
+                                <li><strike>Fallout shelter</strike> infrastructure stuff check</li>
+                                <li>stage simulator (<b style="color: red">B</b>erhaps not)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 	    <div class="footer-separator" style="height:100px;"></div>
     <div class="row" >
