--- a/index.html
+++ b/index.html
@@ -59,14 +59,10 @@
                                 <div class="ak-separator"></div>
                             </div>
                             <ul style="background-color: #2a2a2a; border-radius: 15px; color: white; padding-top: 15px; padding-bottom: 15px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)">
-                                <li>Chara detail <i class="fa fa-check"></i></li>
-                                <li>Item list </li>
-                                <li>Stage list</li>
-                                <li>Daily list</li>
-                                <li>Mission from newbie,daily,and main mission</li>
-                                <li>Show item list</li>
-                                <li><strike>Fallout shelter</strike> infrastructure stuff check</li>
-                                <li>stage simulator (<b style="color: red">B</b>erhaps not)</li>
+                                <li>Game (Still Working) <i class="fa fa-check"></i></li>
+                                <li>Blog </li>
+                                <li><strike>Upload illegal things</strike> Let's try something</li>
+                                <li>3d Game on HTML (<b style="color: red">P</b>erhaps not)</li>
                             </ul>
                         </div>
                     </div>
