--- a/index.html
+++ b/index.html
@@ -84,5 +84,5 @@
 	    
     </body>
 	  <script src='js/nav.js'></script>
-	  <script src=''></script>
+	  <script src='js/home.js'></script>
     </html>
