--- a/index.html
+++ b/index.html
@@ -85,4 +85,5 @@
     </body>
 	  <script src='js/nav.js'></script>
 	  <script src='js/home.js'></script>
+	  <script src='js/donate.js'></script>
     </html>
