--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' href='css/font.css'>
     <link rel='stylesheet' href='css/home.css'>
     <link rel='stylesheet' href='css/detail.css'>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
