--- a/index.html
+++ b/index.html
@@ -86,5 +86,5 @@
     </body>
 	  <script src='js/nav.js'></script>
 	  <script src='js/home.js'></script>
-	  <script src='js/donate.js'></script>
+	  <script src='js/lang.js'></script>
     </html>
