--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
 	    <h2>T</h2>
       <button class='btn btn-sm btn-primary goToTag' style='position:fixed;bottom:15px ;right: 0px;size:70px 70px;padding: 10px;z-index: 10000' id='to-tag' type='button'>^ </button>
-      <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
+      <nav id="nav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
               <img src="./img/custom/texas.jpg" width="40" height="40" style="transform:scale(1.2,1.2)translate(-8px,1px)"class="d-inline-block align-top" alt="">
               <a class="navbar-brand" href="#" translate-id="topbar-1">Exile1201</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -44,18 +44,18 @@
         <div class="col-12 home-sub1" style="display: block; margin: auto;">
             <div class="row">
                 <div class="col-12" id="home-features">
-                    <div class="ak-header">
+                    <div class="header">
                         <span>Available Tools</span>
-                        <div class="ak-separator"></div>
+                        <div class="separator"></div>
                     </div>
 <div id="home-content">
                         
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="ak-header">
+                            <div class="header">
                                 <span>To-do List</span>
-                                <div class="ak-separator"></div>
+                                <div class="separator"></div>
                             </div>
                             <ul style="background-color: #2a2a2a; border-radius: 15px; color: white; padding-top: 15px; padding-bottom: 15px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)">
                                 <li>Game (Still Working) <i class="fa fa-check"></i></li>
@@ -74,7 +74,7 @@
 
 	    <div class="footer-separator" style="height:100px;"></div>
     <div class="row" >
-        <div class="col-12 ak-footer chara-footer-1">
+        <div class="col-12 footer chara-footer-1">
             <div class="col-12 text-center" style="height: 50px;">
                 <span style="vertical-align: middle;line-height: 50px;"></span>
             </div>
