--- a/blog.html
+++ b/blog.html
@@ -13,18 +13,19 @@
     </header>
     <main>
       <!-- This article block is a single blog post! Copy and paste to add additional posts -->
-      <article>
-        <h3>Repl.it Game Jam!</h3>
+      
+      <!-- <article>
+        <h3>Title</h3>
         <hr />
-        <p>The game jam on Repl.it began today!  I'm super excited to make my game.  I'm going to use <a href="https://repl.it.languages/pygame">PyGame</a> to create a really awesome platformer.  </p>
-        <p class="date">2018-03-18</p>
-      </article>
+        <p>Discription</p>
+        <p class="date">Date</p>
+      </article> -->
       
       <article>
-        <h3>Lunch today</h3>
+        <h3>This Blog Site is a work in Progress</h3>
         <hr />
-        <p>Today for lunch I had hawaiian pizza, which is the best kind of pizza.  Pineapples are great on anything.  Then I made some sweet games on Repl.it.  What does the future hold for me?  Guess we'll find out!</p>
-        <p class="date">2018-03-15</p>
+        <p>I have just started this, will make changes along the way,</p>
+        <p class="date">2021-03-11</p>
       </article>
     </main>
     <footer>
