--- a/blog.html
+++ b/blog.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Blog</title>
+    <title>Exile1201's Blog</title>
     <link href="css/blog.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
       <img src="images/rss-icon.png" width="50px" />
-      <h1>Your Future Blog</h1>
+      <h1>Exile1201's Blog</h1>
     </header>
     <main>
       <!-- This article block is a single blog post! Copy and paste to add additional posts -->
