--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="images/rss-icon.png" width="50px" />
+      <img src="img/custom/texas.jpg" width="50px" />
       <h1>Exile1201's Blog</h1>
     </header>
     <main>
