--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>Exile1201's Blog</title>
     <link href="css/blog.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <header>
