--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width">
     <title>Exile1201's Blog</title>
     <link href="css/blog.css" rel="stylesheet" type="text/css" />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel='stylesheet' href='css/font.css'>
     <link rel='stylesheet' href='css/home.css'>
     <link rel='stylesheet' href='css/detail.css'>
+    <link href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css' rel='stylesheet'>
+    <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
+    <script src='//cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js'></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
