--- a/blog.html
+++ b/blog.html
@@ -5,41 +5,15 @@
     <meta name="viewport" content="width=device-width">
     <title>Exile1201's Blog</title>
     <link href="css/blog.css" rel="stylesheet" type="text/css" />
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css'>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel='stylesheet' href='css/font.css'>
-    <link rel='stylesheet' href='css/home.css'>
-    <link rel='stylesheet' href='css/detail.css'>
-    <link href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-    <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
-    <script src='//cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js'></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-159317757-1');
         
-    </script>
-    <script>
-      $(function(){
-        $('#nav-placeholder').load('nav.html');
-      });
-</script>
   </head>
   <body>
-    <h1>T</h1>
-      <button class='btn btn-sm btn-primary goToTag' style='position:fixed;bottom:15px ;right: 0px;size:70px 70px;padding: 10px;z-index: 10000' id='to-tag' type='button'>^ </button>
-      <nav id="nav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
-              <img src="./img/custom/texas.jpg" width="40" height="40" style="transform:scale(1.2,1.2)translate(-8px,1px)"class="d-inline-block align-top" alt="">
-              <a class="navbar-brand" href="#" translate-id="topbar-1">Exile1201</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                      aria-controls="navbarNav" aria-expanded="true" aria-label="展开">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-      </nav>
-<div id='acedonate'></div>
+    <header>
+      <img src="img/custom/texas.jpg" width="50px" />
+      <h1>Exile1201</h1>
+    </header>
     
     <main>
       <!-- This article block is a single blog post! Copy and paste to add additional posts -->
